Yuvoh DataScientist Assessment Solution V3

--- a/Final_Yuvoh_Solution.ipynb
+++ b/Final_Yuvoh_Solution.ipynb
@@ -32,7 +32,6 @@
     "import seaborn as sns\n",
     "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
     "from sklearn.model_selection import train_test_split, cross_val_score\n",
-    "import xgboost as xgb\n",
     "from sklearn.metrics import explained_variance_score, mean_squared_error, r2_score\n",
     "import time\n",
     "from keras import models, layers, optimizers, regularizers\n",
@@ -678,7 +677,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Carbon monoxide detector', '', 'Elevator', 'Private bathroom', \"Chef's kitchen\", 'Hot water kettle', 'Garage parking', 'Bath towel', 'Long term stays allowed', 'Wide clearance to shower', 'Amazon Echo', 'Lake access', 'Beach view', 'Children’s books and toys', 'Indoor fireplace', 'Smart lock', 'Pillow-top mattress', 'Self check-in', 'Shared hot tub', 'Day bed', 'Flat path to guest entrance', 'Dog(s)', 'Gym', 'Oven', 'Safe', 'Kitchen', 'Extra pillows and blankets', 'Apple TV', 'Security system', 'Crib', 'Host greets you', 'Firm mattress', 'Pool', 'Heated towel rack', 'Fire extinguisher', 'Netflix', 'Single level home', 'Heated floors', 'Gas fireplace', 'Ethernet connection', 'Waterfront', 'Window guards', 'Wide hallways', 'Coffee maker', 'Ceiling fan', 'Iron', 'Suitable for events', 'Stove', 'Convection oven', 'translation missing: en.hosting_amenity_50', 'Well-lit path to entrance', 'Table corner guards', 'Shampoo', 'Shared gym', 'Hair dryer', 'En suite bathroom', 'Murphy bed', 'Steam oven', 'Fixed grab bars for toilet', 'Sauna', 'Exercise equipment', 'Pack ’n Play/travel crib', 'Walk-in shower', 'Dryer', 'Beachfront', 'Touchless faucets', 'First aid kit', 'TV', 'Sun loungers', 'Accessible-height bed', 'Outdoor parking', 'Kitchenette', 'Dining table', 'Projector and screen', 'High-resolution computer monitor', 'Extra space around bed', 'Disabled parking spot', 'Toilet paper', 'Roll-in shower', 'Jetted tub', 'Bed linens', 'Lounge area', 'Lock on bedroom door', 'Outdoor kitchen', 'Ski-in/Ski-out', 'Heat lamps', 'Ice Machine', 'Central air conditioning', 'Air conditioning', 'Private entrance', 'Alfresco bathtub', 'Hangers', 'Children’s dinnerware', 'Accessible-height toilet', 'Breakfast bar', 'Family/kid friendly', 'EV charger', 'Patio or balcony', 'Wide entrance for guests', 'Mini fridge', 'BBQ grill', 'Soaking tub', 'Changing table', 'Private pool', 'Keypad', 'Wide doorway to guest bathroom', 'Cable TV', 'Memory foam mattress', 'Body soap', 'Lockbox', 'Wifi', 'Bedroom comforts', 'Other pet(s)', 'Warming drawer', 'No stairs or steps to enter', 'Garden or backyard', 'Beach essentials', 'Bathroom essentials', 'High chair', 'Standing valet', 'Dishwasher', 'Pets allowed', 'toilet', 'DVD player', 'Balcony', 'Rain shower', 'Gas oven', 'Paid parking on premises', 'Mountain view', 'Stand alone steam shower', 'Ceiling hoist', 'Outdoor seating', 'Free street parking', 'Hot tub', 'Pool cover', 'Other', 'Luggage dropoff allowed', 'Bathtub with bath chair', 'Safety card', 'Wide entryway', 'Pocket wifi', 'Internet', 'Smoking allowed', 'Private hot tub', 'Full kitchen', 'Dishes and silverware', 'Fixed grab bars for shower', 'Fire pit', 'HBO GO', 'Wide entrance', 'Hammock', 'Refrigerator', 'Cooking basics', 'Heating', 'Breakfast table', 'Microwave', 'Cleaning before checkout', 'Wine cooler', 'Stair gates', 'Wheelchair accessible', '24-hour check-in', 'Paid parking off premises', 'Breakfast', 'Essentials', 'Fireplace guards', 'Mobile hoist', 'Baby bath', 'Air purifier', 'translation missing: en.hosting_amenity_49', 'Babysitter recommendations', 'Private living room', 'Ground floor access', 'Mudroom', 'Smart TV', 'Cat(s)', 'Smoke detector', 'Building staff', 'Hot water', 'Laptop friendly workspace', 'Dining area', 'Garden', 'Handheld shower head', 'Washer', 'Formal dining area', 'Propane barbeque', 'Free parking on premises', 'Double oven', 'Baby monitor', 'Office', 'Sonos sound system', 'Electric profiling bed', 'Printer', 'Washer / Dryer', 'Satellite TV', 'Bathtub', 'Buzzer/wireless intercom', 'Room-darkening shades', 'Fax machine', 'Terrace', 'Shared pool', 'Bidet', 'Shower chair', 'Doorman', 'Tennis court', 'Ironing Board', 'Sound system', 'Game console', 'Pets live on this property', 'Outlet covers', 'Espresso machine']\n"
+      "['', 'Roll-in shower', 'Dining table', 'Game console', 'Dog(s)', 'Day bed', 'Memory foam mattress', 'En suite bathroom', 'Ceiling fan', 'Dishes and silverware', 'Lockbox', 'Heated towel rack', 'Mini fridge', 'Laptop friendly workspace', 'First aid kit', 'Apple TV', 'Bedroom comforts', 'Private hot tub', 'Printer', 'Baby bath', 'Rain shower', 'Safe', 'Microwave', 'Fire extinguisher', 'Mobile hoist', 'Alfresco bathtub', 'Babysitter recommendations', 'Pets live on this property', 'Shared hot tub', 'Espresso machine', 'Gas oven', 'Beach essentials', 'Private pool', 'Lake access', 'Office', 'Shampoo', 'Single level home', 'High chair', 'Sound system', 'Luggage dropoff allowed', 'Wide entrance', 'Wide entrance for guests', 'Window guards', 'Children’s books and toys', 'Fireplace guards', 'Doorman', 'Free street parking', 'Terrace', 'Convection oven', 'Garage parking', 'No stairs or steps to enter', 'Warming drawer', 'BBQ grill', 'Self check-in', 'Patio or balcony', 'Refrigerator', 'Waterfront', 'Netflix', 'Projector and screen', 'Sauna', 'Flat path to guest entrance', 'Air purifier', 'Private living room', 'Ski-in/Ski-out', 'Smoking allowed', 'Stair gates', 'Washer', 'Outdoor kitchen', 'Essentials', 'Bidet', 'Smart TV', 'Free parking on premises', 'Formal dining area', 'Full kitchen', 'Pets allowed', 'Heated floors', 'Mudroom', 'Wifi', 'Bathtub', 'Family/kid friendly', 'Firm mattress', 'Amazon Echo', \"Chef's kitchen\", 'Pool', 'Ice Machine', 'Private bathroom', 'Other', 'Electric profiling bed', 'Body soap', 'Other pet(s)', 'Internet', 'Long term stays allowed', 'Hot water', 'Paid parking on premises', 'Toilet paper', 'Smart lock', 'Central air conditioning', 'Lounge area', 'Sun loungers', 'Crib', 'Smoke detector', 'Disabled parking spot', 'Accessible-height toilet', 'Satellite TV', 'Cleaning before checkout', 'Safety card', 'Host greets you', 'Breakfast', 'Ironing Board', 'Beach view', 'Kitchen', 'Pillow-top mattress', 'Dining area', 'Oven', 'Ground floor access', 'Sonos sound system', 'Heating', 'Security system', 'Extra space around bed', 'Hot tub', 'Dishwasher', 'Coffee maker', 'Wide hallways', 'Pack ’n Play/travel crib', 'Dryer', 'Shared pool', 'Elevator', 'Standing valet', 'Gas fireplace', 'Handheld shower head', 'Outdoor seating', 'Cooking basics', 'Accessible-height bed', 'Hot water kettle', 'Shared gym', 'Building staff', 'Gym', 'Ethernet connection', 'translation missing: en.hosting_amenity_49', 'Wide clearance to shower', 'Exercise equipment', 'Steam oven', 'Baby monitor', 'Jetted tub', 'EV charger', 'Hangers', 'Murphy bed', 'Iron', 'Wine cooler', 'Soaking tub', 'Garden', 'HBO GO', 'Outdoor parking', 'Pool cover', 'Bed linens', 'Mountain view', 'Indoor fireplace', 'Garden or backyard', '24-hour check-in', 'Suitable for events', 'Table corner guards', 'Fire pit', 'Well-lit path to entrance', 'Room-darkening shades', 'Air conditioning', 'Changing table', 'Beachfront', 'Cable TV', 'Children’s dinnerware', 'DVD player', 'Washer / Dryer', 'Tennis court', 'Fax machine', 'Bathroom essentials', 'Carbon monoxide detector', 'Touchless faucets', 'TV', 'Shower chair', 'Extra pillows and blankets', 'Double oven', 'Ceiling hoist', 'Kitchenette', 'Wide entryway', 'Stove', 'Hair dryer', 'Walk-in shower', 'Breakfast table', 'Buzzer/wireless intercom', 'Fixed grab bars for toilet', 'Breakfast bar', 'Paid parking off premises', 'Propane barbeque', 'Heat lamps', 'Keypad', 'Hammock', 'Stand alone steam shower', 'Cat(s)', 'Lock on bedroom door', 'toilet', 'High-resolution computer monitor', 'Bath towel', 'Wide doorway to guest bathroom', 'Wheelchair accessible', 'Fixed grab bars for shower', 'Bathtub with bath chair', 'Private entrance', 'Outlet covers', 'Pocket wifi', 'translation missing: en.hosting_amenity_50', 'Balcony']\n"
      ]
     }
    ],
@@ -1140,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1169,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1203,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1213,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1242,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1255,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1277,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1314,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1334,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1354,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1374,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1399,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1408,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1442,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1468,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1477,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1505,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 63,
    "metadata": {
     "scrolled": true
    },
@@ -1545,7 +1544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1578,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1595,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1639,7 +1638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1682,7 +1681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1730,7 +1729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -1744,35 +1743,25 @@
       "Use tf.cast instead.\n",
       "Train on 60337 samples, validate on 6705 samples\n",
       "Epoch 1/15\n",
-      "60337/60337 [==============================] - 3s 55us/step - loss: 0.6154 - mean_squared_error: 0.6154 - val_loss: 0.2212 - val_mean_squared_error: 0.2212\n",
+      "60337/60337 [==============================] - 3s 57us/step - loss: 0.6146 - mean_squared_error: 0.6146 - val_loss: 0.2213 - val_mean_squared_error: 0.2213\n",
       "Epoch 2/15\n",
-      "60337/60337 [==============================] - 2s 33us/step - loss: 0.1910 - mean_squared_error: 0.1910 - val_loss: 0.1911 - val_mean_squared_error: 0.1911\n",
+      "60337/60337 [==============================] - 2s 37us/step - loss: 0.1909 - mean_squared_error: 0.1909 - val_loss: 0.1909 - val_mean_squared_error: 0.1909\n",
       "Epoch 3/15\n",
-      "60337/60337 [==============================] - 2s 33us/step - loss: 0.1693 - mean_squared_error: 0.1693 - val_loss: 0.1787 - val_mean_squared_error: 0.1787\n",
+      "60337/60337 [==============================] - 2s 35us/step - loss: 0.1692 - mean_squared_error: 0.1692 - val_loss: 0.1787 - val_mean_squared_error: 0.1787\n",
       "Epoch 4/15\n",
-      "60337/60337 [==============================] - 2s 33us/step - loss: 0.1548 - mean_squared_error: 0.1548 - val_loss: 0.1765 - val_mean_squared_error: 0.1765\n",
+      "60337/60337 [==============================] - 2s 35us/step - loss: 0.1548 - mean_squared_error: 0.1548 - val_loss: 0.1764 - val_mean_squared_error: 0.1764\n",
       "Epoch 5/15\n",
-      "60337/60337 [==============================] - 2s 33us/step - loss: 0.1480 - mean_squared_error: 0.1480 - val_loss: 0.1805 - val_mean_squared_error: 0.1805\n",
+      "60337/60337 [==============================] - 2s 34us/step - loss: 0.1479 - mean_squared_error: 0.1479 - val_loss: 0.1804 - val_mean_squared_error: 0.1804\n",
       "Epoch 6/15\n",
-      "60337/60337 [==============================] - 2s 36us/step - loss: 0.1419 - mean_squared_error: 0.1419 - val_loss: 0.1714 - val_mean_squared_error: 0.1714\n",
+      "60337/60337 [==============================] - 2s 34us/step - loss: 0.1419 - mean_squared_error: 0.1419 - val_loss: 0.1708 - val_mean_squared_error: 0.1708\n",
       "Epoch 7/15\n",
-      "60337/60337 [==============================] - 2s 36us/step - loss: 0.1380 - mean_squared_error: 0.1380 - val_loss: 0.1690 - val_mean_squared_error: 0.1690\n",
+      "60337/60337 [==============================] - 2s 33us/step - loss: 0.1380 - mean_squared_error: 0.1380 - val_loss: 0.1687 - val_mean_squared_error: 0.1687\n",
       "Epoch 8/15\n",
-      "60337/60337 [==============================] - 2s 34us/step - loss: 0.1328 - mean_squared_error: 0.1328 - val_loss: 0.1714 - val_mean_squared_error: 0.1714\n",
+      "60337/60337 [==============================] - 2s 35us/step - loss: 0.1329 - mean_squared_error: 0.1329 - val_loss: 0.1714 - val_mean_squared_error: 0.1714\n",
       "Epoch 9/15\n",
-      "60337/60337 [==============================] - 2s 33us/step - loss: 0.1272 - mean_squared_error: 0.1272 - val_loss: 0.1680 - val_mean_squared_error: 0.1680\n",
+      "60337/60337 [==============================] - 2s 37us/step - loss: 0.1272 - mean_squared_error: 0.1272 - val_loss: 0.1683 - val_mean_squared_error: 0.1683\n",
       "Epoch 10/15\n",
-      "60337/60337 [==============================] - 2s 34us/step - loss: 0.1245 - mean_squared_error: 0.1245 - val_loss: 0.1757 - val_mean_squared_error: 0.1757\n",
-      "Epoch 11/15\n",
-      "60337/60337 [==============================] - 2s 33us/step - loss: 0.1193 - mean_squared_error: 0.1193 - val_loss: 0.1708 - val_mean_squared_error: 0.1708\n",
-      "Epoch 12/15\n",
-      "60337/60337 [==============================] - 2s 34us/step - loss: 0.1180 - mean_squared_error: 0.1180 - val_loss: 0.1803 - val_mean_squared_error: 0.1803\n",
-      "Epoch 13/15\n",
-      "60337/60337 [==============================] - 2s 33us/step - loss: 0.1138 - mean_squared_error: 0.1138 - val_loss: 0.1755 - val_mean_squared_error: 0.1755\n",
-      "Epoch 14/15\n",
-      "60337/60337 [==============================] - 2s 37us/step - loss: 0.1096 - mean_squared_error: 0.1096 - val_loss: 0.1746 - val_mean_squared_error: 0.1746\n",
-      "Epoch 15/15\n",
-      "60337/60337 [==============================] - 2s 38us/step - loss: 0.1073 - mean_squared_error: 0.1073 - val_loss: 0.1769 - val_mean_squared_error: 0.1769\n"
+      "40704/60337 [===================>..........] - ETA: 0s - loss: 0.1223 - mean_squared_error: 0.1223"
      ]
     }
    ],
