Yuvoh DataScientist Assessment Solution V4

--- a/Final_Yuvoh_Solution.ipynb
+++ b/Final_Yuvoh_Solution.ipynb
@@ -34,6 +34,10 @@
     "from sklearn.model_selection import train_test_split, cross_val_score\n",
     "from sklearn.metrics import explained_variance_score, mean_squared_error, r2_score\n",
     "import time\n",
+    "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
     "from keras import models, layers, optimizers, regularizers\n",
     "from keras.utils.vis_utils import model_to_dot"
    ]
@@ -1119,8 +1123,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
-    "\n",
     "analyser = SentimentIntensityAnalyzer()\n",
     "def sentiment_analyzer_scores(sentence):\n",
     "    score = analyser.polarity_scores(sentence)\n",
@@ -1613,8 +1615,6 @@
    "source": [
     "# Linear Regression\n",
     "\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "\n",
     "multiple_linear_regressor = LinearRegression()\n",
     "multiple_linear_regressor.fit(X_train, y_train)\n",
     "\n",
@@ -1655,9 +1655,9 @@
     }
    ],
    "source": [
-    "from sklearn.ensemble import RandomForestRegressor\n",
+    "# Random Forest.\n",
     "\n",
-    " # create regressor object \n",
+    "# create regressor object \n",
     "regressor = RandomForestRegressor(n_estimators = 150, random_state = 0)\n",
     "  \n",
     "# fit the regressor with x and y data \n",
@@ -1729,7 +1729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {
     "scrolled": true
    },
@@ -1761,7 +1761,17 @@
       "Epoch 9/15\n",
       "60337/60337 [==============================] - 2s 37us/step - loss: 0.1272 - mean_squared_error: 0.1272 - val_loss: 0.1683 - val_mean_squared_error: 0.1683\n",
       "Epoch 10/15\n",
-      "40704/60337 [===================>..........] - ETA: 0s - loss: 0.1223 - mean_squared_error: 0.1223"
+      "60337/60337 [==============================] - 2s 38us/step - loss: 0.1247 - mean_squared_error: 0.1247 - val_loss: 0.1734 - val_mean_squared_error: 0.1734\n",
+      "Epoch 11/15\n",
+      "60337/60337 [==============================] - 2s 40us/step - loss: 0.1197 - mean_squared_error: 0.1197 - val_loss: 0.1688 - val_mean_squared_error: 0.1688\n",
+      "Epoch 12/15\n",
+      "60337/60337 [==============================] - 2s 34us/step - loss: 0.1175 - mean_squared_error: 0.1175 - val_loss: 0.1759 - val_mean_squared_error: 0.1759\n",
+      "Epoch 13/15\n",
+      "60337/60337 [==============================] - 2s 36us/step - loss: 0.1140 - mean_squared_error: 0.1140 - val_loss: 0.1743 - val_mean_squared_error: 0.1743\n",
+      "Epoch 14/15\n",
+      "60337/60337 [==============================] - 2s 33us/step - loss: 0.1097 - mean_squared_error: 0.1097 - val_loss: 0.1730 - val_mean_squared_error: 0.1730\n",
+      "Epoch 15/15\n",
+      "60337/60337 [==============================] - 2s 34us/step - loss: 0.1078 - mean_squared_error: 0.1078 - val_loss: 0.1789 - val_mean_squared_error: 0.1789\n"
      ]
     }
    ],
@@ -1776,7 +1786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 70,
    "metadata": {
     "scrolled": true
    },
@@ -1785,12 +1795,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training MSE: 0.1024\n",
-      "Validation MSE: 0.1705\n",
+      "Training MSE: 0.1057\n",
+      "Validation MSE: 0.1727\n",
       "\n",
       "\n",
-      "Training r2: 0.8317\n",
-      "Validation r2: 0.7157\n"
+      "Training r2: 0.8262\n",
+      "Validation r2: 0.7121\n"
      ]
     }
    ],
