--- a/Final_Yuvoh_Solution.ipynb
+++ b/Final_Yuvoh_Solution.ipynb
@@ -1826,7 +1826,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After analysing the features provided, we have dropped some of the features which either have more NAs or of Single category or features which are highly correlated with other features, We have replaced Sentiment Analysis Score for Summary Feature. We've also drawn relevant insights from our __Exploratory Data Analysis (EDA)__ then have normalized and modelled the data over various regression algorithms and clearly see that <font color=blue>__Random Forest Regressor__</font> provides the best result with a __mean squared error__ of __0.1422__ and __r2_Score__ of __0.7629__ "
+    "After analysing the features provided, we have dropped some of the features which either have more NAs or of Single category or features which are highly correlated with other features, We have replaced Sentiment Analysis Score for Summary Feature. We've also drawn relevant insights from our __Exploratory Data Analysis (EDA)__ then have normalized and modelled the data over various regression algorithms and clearly see that __Random Forest Regressor__ provides the best result with a __mean squared error__ of __0.1422__ and __r2_Score__ of __0.7629__ "
    ]
   }
  ],
